# HiDash

./: CMakeLists.txt  README.md  lazytools.cpp  lazytools.h  qmldir
hidash/: CMakeLists.txt  hidash.cpp  hidash.h
hidash/functions/: debouncefunction.cpp
lazytools/: CMakeLists.txt  debouncefunction.cpp  debouncefunction.h  lazytools.cpp  lazytools.h
test/: CMakeLists.txt  main.cpp  main.qml  test.cpp  tst_test1.qml
